# Carbo

./: .gitignore  CHANGELOG.md  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-13-carbo-writing-workbench.md
scripts/: prepare-vditor-assets.mjs  release-version.mjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: main.css
src/components/: HeaderNav.vue
src/config/: default.ts
src/pages/: About.vue  ExportImage.vue  ExportPPT.vue  ExportPdf.vue  Main.vue
src/router/: index.ts
src/utils/: openPaths.ts  path.ts  workbench.ts
