[package]
name = "carbo-markdown-editor"
version = "1.1.0"
description = "Carbo - A desktop Markdown editor built with Vue 3 and Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "carbo_markdown_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
